Initial work on the demographics questionnaire

--- a/dining_room/templates/dining_room/login.html
+++ b/dining_room/templates/dining_room/login.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="row justify-content-center">
-    <form method="post" action="{% url 'login' %}">
+    <form method="post" action="{% url 'dining_room:login' %}">
     {% csrf_token %}
     <table class="table table-borderless">
     <tr>
