--- a/dining_room/templates/dining_room/demographics.html
+++ b/dining_room/templates/dining_room/demographics.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="row justify-content-center">
-    <form method="post" action="{% url 'dining_room:demographics' %}">
+    <form method="post" action="{% url 'dining_room:demographics' %}" class="col-12 table-responsive">
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
     {{ hidden }}
