Create a helper script for postgres

--- a/dining_room/templates/dining_room/instructions_test.html
+++ b/dining_room/templates/dining_room/instructions_test.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+<title>Instructions | Robot Assistance Study</title>
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid">
 
