Rename and bugfixes

--- a/dining_room/templates/dining_room/instructions.html
+++ b/dining_room/templates/dining_room/instructions.html
@@ -12,7 +12,7 @@
 
     <p>You will NOT be able to return to this page! <b>(should this be true?)</b></p>
 
-    <p><a href="{% url 'dining_room:instructions_t' %}">Start the study</a></p>
+    <p><a href="{% url 'dining_room:test' %}">Start the study</a></p>
 </div>
 {% endblock %}
 
