--- a/dining_room/templates/dining_room/complete.html
+++ b/dining_room/templates/dining_room/complete.html
@@ -3,6 +3,8 @@
 {% block content %}
 <div class="container-fluid">
     <p>Thank you for completing this study. Please enter the following code at AMT, <b>{{ request.user.unique_key }}</b>, in order to receive your compensation (pending verification of the code).</p>
+
+    <p><a href="{% url 'dining_room:logout' %}">Exit the study</a></p>
 </div>
 {% endblock %}
 
