--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -23,4 +23,7 @@
   <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js" crossorigin></script>
   {% endblock %}
+
+  {% block postscripts %}
+  {% endblock %}
 </body>
