--- a/dining_room/templates/dining_room/study.html
+++ b/dining_room/templates/dining_room/study.html
@@ -1,7 +1,25 @@
 {% extends "base.html" %}
 
+{% load static %}
+
+{% block styles %}
+<link rel="stylesheet" href="{% static 'dining_room/study.css' %}">
+{% endblock %}
+
 {% block content %}
-<div class="container-fluid">
-    <p><a href="{% url 'dining_room:survey' %}">Complete the study</a></p>
+<div id="app">
 </div>
+
+<div>
+    <p>Temporary placeholder to <a href="{% url 'dining_room:survey' %}">next page</a></p>
+</div>
+{% endblock %}
+
+{% block postscripts %}
+<script src="{% static 'dining_room/study.jsx' %}" type="text/babel"></script>
+<script type="text/babel">
+    const start_state = "{{ request.user.start_condition }}";
+    var current_state = "{{ current_state }}";
+    var current_transition = "{{ current_transition }}";
+</script>
 {% endblock %}
