--- a/dining_room/templates/dining_room/study.html
+++ b/dining_room/templates/dining_room/study.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block styles %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin>
 <link rel="stylesheet" href="{% static 'dining_room/study.css' %}">
 {% endblock %}
 
@@ -16,11 +17,11 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'dining_room/study.jsx' %}" type="text/babel"></script>
+<script src="{% static 'dining_room/study.js' %}"></script>
 
-<script type="text/babel">
-    const start_state = "{{ request.user.start_condition }}";
-    var current_state = "{{ current_state }}";
-    var current_transition = "{{ current_transition }}";
+<script type="text/javascript">
+    const START_STATE = "{{ request.user.start_condition }}";
+    var CURRENT_STATE = "{{ current_state }}";
+    var CURRENT_TRANSITION = "{{ current_transition }}";
 </script>
 {% endblock %}
