--- a/dining_room/static/react/css/styles.scss
+++ b/dining_room/static/react/css/styles.scss
@@ -1,5 +1,47 @@
 // @import "~bootstrap/scss/bootstrap";
 
+// Copy from Material design UI (masks)
+$mask-overlay-transition                     : all .4s ease-in-out !default;
+$mask-zoom-transition                        : all .2s linear !default;
+$mask-zoom-transform                         : scale(1.1) !default;
+$intro-video-transform                       : translateX(-50%) translateY(-50%) !default;
+$intro-video-transition                      : 1s !default;
+
+.view {
+  position: relative;
+  overflow: hidden;
+  cursor: default;
+  .mask {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-attachment: fixed;
+  }
+  img, video {
+    position: relative;
+    display: block;
+  }
+  video {
+    &.video-intro {
+      top: 50%;
+      left: 50%;
+      z-index: -100;
+      width: auto;
+      min-width: 100%;
+      height: auto;
+      min-height: 100%;
+      transition: $intro-video-transition opacity;
+      transform: $intro-video-transform;
+    }
+  }
+}
+
+// Remove the ability to interact with the video
 video {
     pointer-events: none;
 }
