--- a/dining_room/templates/dining_room/study.html
+++ b/dining_room/templates/dining_room/study.html
@@ -4,6 +4,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.min.css" integrity="sha256-G3IAYJYIQvZgPksNQDbjvxd/Ca1SfCDFwu2s2lt0oGo=" crossorigin="anonymous" />
 <link rel="stylesheet" href="{% static 'dining_room/study.css' %}">
 {% endblock %}
 
@@ -16,12 +17,14 @@
                 video_loaded: false,
                 video_playing: false,
                 confirmed_dx: [],
+                dx_certainty: null,
                 selected_action: null,
                 selected_action_idx: 0,
                 // Timestamps
                 video_loaded_time: null,
                 video_stop_time: null,
                 dx_selected_time: null,
+                dx_confirmed_time: null,
                 ax_selected_time: null
             },
             scenario_state: {{ scenario_state|safe }},
