Finally started the instructions

--- a/dining_room/templates/dining_room/instructions.html
+++ b/dining_room/templates/dining_room/instructions.html
@@ -5,13 +5,14 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
-    <p>There will be a video here explaining what's going on</p>
+<div class="container">
 
-    <p>Meanwhile, why don't you move on to the next page</p>
+<div class="row">
+    <h3 class="col mt-4">Instructions</h3>
+</div>
 
-    <p>You will NOT be able to return to this page! <b>(should this be true?)</b></p>
+<hr/>
 
-    <p><a href="{% url 'dining_room:test' %}">Start the study</a></p>
+
 </div>
 {% endblock %}
