--- a/dining_room/templates/dining_room/test.html
+++ b/dining_room/templates/dining_room/test.html
@@ -7,8 +7,8 @@
 {% block content %}
 <div class="container">
 
-<div class="row mt-4">
-    <div class="col">
+<div class="row">
+    <div class="col mt-4">
     <h3>Knowledge Review</h3>
     <p>Please answer the following questions correctly before proceeding; <b>your compensation depends on the correctness of your answers</b>. You may return to the instructions to refresh anything you might've forgotten.</p>
     </div>
