--- a/dining_room/templates/dining_room/complete.html
+++ b/dining_room/templates/dining_room/complete.html
@@ -1,9 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid">
-    <p>Thank you for completing this study. Please enter the following code at AMT, <b>{{ request.user.unique_key }}</b>, in order to receive your compensation (pending verification of the code).</p>
+<div class="container">
+<div class="row">
+    <div class="col mt-4">
+    <h3>Complete</h3>
+</div>
+</div>
 
-    <p><a href="{% url 'dining_room:logout' %}">Exit the study</a></p>
+<hr/>
+
+<div class="row">
+<div class="col">
+    <p>Thank you for completing this study. Please enter the following code on Amazon Mechanical Turk in order to receive your compensation (pending verification of the code):</p>
+
+    <blockquote class="blockquote">
+    <b>{{ request.user.unique_key }}</b>
+    </blockquote>
+
+    <p>You may now <a href="{% url 'dining_room:logout' %}">exit the study</a></p>
+</div>
 </div>
 {% endblock %}
