--- a/dining_room/templates/dining_room/demographics.html
+++ b/dining_room/templates/dining_room/demographics.html
@@ -3,8 +3,21 @@
 {% block content %}
 <div class="container">
 
+<div class="row">
+    <div class="col mt-4">
+    <h3>Assisting a robot in a household task</h3>
+    <p>This study involves the use of a web browser to assist a robot, which may have encountered an error, in completing a simple household task. You will be asked to provide the robot with information on what might have gone wrong and help it with recovering from the error.</p>
+    <p>Your data is anonymized and no personally identifiable information will be solicited. We set a cookie to track your progress through the study, but the cookie is invalidated when the study session is complete and it cannot be reused on third-party websites.</p>
+    <p>Your compensation is contingent on the your performance and conduct in the study. Noncompliance with the instructions will result in the forfeiture of compensation.</p>
+    <p>You are eligible for this study if you are of sound mind, are above the age of 18, are fluent in English, and are comfortable with day-to-day computer use. Additionally this study must be completed using either the latest Google Chrome or the latest Mozilla Firefox web browsers.</p>
+    <p><b>By completing the following questionnaire below, you agree that you have read the text above and agree to abide by it. You may choose to exit the study at any time, at the potential loss of your compensation.</b></p>
+    </div>
+</div>
+
+<hr/>
+
 {% spaceless %}
-<div class="row justify-content-center mt-4">
+<div class="row justify-content-center">
     <form method="post" action="{% url 'dining_room:demographics' %}" class="col">
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
