--- a/dining_room/templates/dining_room/instructions.html
+++ b/dining_room/templates/dining_room/instructions.html
@@ -13,6 +13,90 @@
 
 <hr/>
 
+<div class="row">
+<div class="col">
+    <ul>
+    <li>The robot is in a living room with three pertinent locations - The Couch, The Dining Table, and The Kitchen Counter.</li>
+    <li>There are three pertinent objects in this environment - The Jug, The Bowl, and The Cup (shown below)</li>
+    <li>The robot has been given the goal of grabbin the cup from the Kitchen Counter and taking it to the Couch <small>(in anticipation of a human arriving to receive the cup)</small>.</li>
+    <li>If the robot has an error, it is designed to seek assistance from a remote human, such as yourself.</li>
+    <li>In the event of the error, your job is to direct the robot so that it ends up by the Couch with the Cup.</li>
+    </ul>
+</div>
+</div>
+
+<div class="row">
+<div class="col d-flex justify-content-center">
+    <figure class="figure text-center">
+      <img src="https://dl.dropboxusercontent.com/s/q93qdf6wsynv9gj/jug.png" class="figure-img img-fluid rounded" style="max-height: 100px">
+      <figcaption class="figure-caption">The Jug</figcaption>
+    </figure>
+</div>
+<div class="col d-flex justify-content-center">
+    <figure class="figure text-center">
+      <img src="https://dl.dropboxusercontent.com/s/m9791ha08diz67u/bowl.png" class="figure-img img-fluid rounded" style="max-height: 100px">
+      <figcaption class="figure-caption">The Bowl</figcaption>
+    </figure>
+</div>
+<div class="col d-flex justify-content-center">
+    <figure class="figure text-center">
+      <img src="https://dl.dropboxusercontent.com/s/2nz6qvm2rhk2s8c/mug.png" class="figure-img img-fluid rounded" style="max-height: 100px">
+      <figcaption class="figure-caption">The Cup</figcaption>
+    </figure>
+</div>
+</div>
+
+<div class="row">
+    <p class="col">The video below is an example of the robot completing its task:</p>
+</div>
+
+<div class="row">
+<div class="col">
+    <div class="embed-responsive embed-responsive-16by9">
+        <video muted controls class="embed-responsive-item">
+            <source src="https://dl.dropboxusercontent.com/s/3uyfvpae0gmiy35/complete_task_instructions.mp4">
+        </video>
+    </div>
+</div>
+</div>
+
+<h1 class="mt-3">TODO: A screenshot of the UI and a brief introduction to the different parts that need to be filled in.</h1>
+
+<div class="row">
+    <p class="col">When assisting the robot, you will have <b>four types</b> of actions available to you:</p>
+</div>
+
+<div class="row">
+<div class="col">
+<dl class="row">
+    <dt class="col-sm-3">Navigate to</dt>
+    <dd class="col-sm-9">The action type moves the robot base to the desired location (among the three available) in the room.</dd>
+
+    <dt class="col-sm-3">Look at</dt>
+    <dd class="col-sm-9">The robot moves away from its current location to point its camera at the desired location. After viewing that location for a few seconds, the robot returns to looking at its original location.</dd>
+
+    <dt class="col-sm-3">Update robot's location belief to</dt>
+    <dd class="col-sm-9">The robot maintains a belief of where in the room it is. If you think it is mistaken in its belief, you may update it by taking this action.</dd>
+
+    <dt class="col-sm-3">Pick up</dt>
+    <dd class="col-sm-9">If the robot recognizes an object and its gripper is empty, then it can be directed to pick up the object.</dd>
+
+    <dt class="col-sm-3">Stow object in gripper</dt>
+    <dd class="col-sm-9">If there is an object in the robot's gripper, it can be directed to stow that object on its base. This might involve background arm motion that is not visible in the robot's camera.</dd>
+</dl>
+</div>
+</div>
+
+<div class="row">
+    <p class="col">If you understand these instructions, please click Next.</p>
+</div>
+
+<div class="row my-5">
+    <div class="offset-8 col-4">
+        <a href="{% url 'dining_room:test' %}" class="btn btn-block btn-outline-primary btn-lg">Next</a>
+    </div>
+</div>
+
 
 </div>
 {% endblock %}
