--- a/dining_room/templates/dining_room/test.html
+++ b/dining_room/templates/dining_room/test.html
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col mt-4">
     <h3>Knowledge Review</h3>
-    <p>Please answer the following questions correctly before proceeding; <b>your compensation depends on the correctness of your answers</b>. You may return to the instructions to refresh anything you might've forgotten.</p>
+    <p>Please answer the following questions to the best of your ability before proceeding; <b>your compensation depends on the correctness of your answers</b>. You may return to the instructions to refresh anything you might've forgotten.</p>
     </div>
 </div>
 
@@ -69,6 +69,7 @@
         </div>
         <div class="col-4 offset-4">
             <input type="submit" value="Submit" class="btn btn-block btn-outline-primary btn-lg">
+            <p><small class="text-danger"><b>The instructions will be unavailable once you proceed</b></small></p>
         </div>
     </div>
     </form>
