--- a/dining_room/templates/dining_room/demographics.html
+++ b/dining_room/templates/dining_room/demographics.html
@@ -7,9 +7,9 @@
     <div class="col mt-4">
     <h3>Assisting a robot in a household task</h3>
     <p>This study involves the use of a web browser to assist a robot, which may have encountered an error, in completing a simple household task. You will be asked to provide the robot with information on what might have gone wrong and help it with recovering from the error.</p>
-    <p>Your data is anonymized and no personally identifiable information will be solicited. We set a cookie to track your progress through the study, but the cookie is invalidated when the study session is complete and it cannot be reused on third-party websites.</p>
+    <p>Your data is anonymized and no personally identifiable information will be solicited. We set a cookie to track your progress through the study, but the cookie is invalidated when the study session is complete. The cookie cannot be reused on third-party websites.</p>
     <p>Your compensation is contingent on the your performance and conduct in the study. Noncompliance with the instructions will result in the forfeiture of compensation.</p>
-    <p>You are eligible for this study if you are of sound mind, are above the age of 18, are fluent in English, and are comfortable with day-to-day computer use without the need for visual assistive technologies (such as screen-readers). Additionally this study must be completed using either the latest Google Chrome or the latest Mozilla Firefox web browsers.</p>
+    <p>You are eligible for this study if you are of sound mind, are above the age of 18, are fluent in English, and are comfortable with day-to-day computer use without the need for visual assistive technologies (such as screen-readers). Additionally the study must be completed on a computer (not mobile phone or tablet) using either the latest Google Chrome or the latest Mozilla Firefox web browsers.</p>
     <p><b>By completing the following questionnaire below, you agree that you have read the text above and agree to abide by it. You may choose to exit the study at any time, at the potential loss of your compensation.</b></p>
     </div>
 </div>
@@ -41,9 +41,9 @@
         <div class="col btn-group" data-toggle="buttons">
             {% for value, name in field.field.choices %}
             {% if value != '' %}
-            <label class="col btn btn-outline-dark form-check-label {% if value|safe == field.value|safe %}active{% endif %}">
-            <input class="form-check-input" type="radio" name="{{ field.name }}" value="{{ value }}" style="visibility: hidden;" {% if value|safe == field.value|safe %}checked{% endif %}> {{ name }}
-            </label>
+            <button class="col btn btn-outline-dark form-check-label {% if value|safe == field.value|safe %}active{% endif %}">
+            <input class="form-check-input" type="radio" name="{{ field.name }}" value="{{ value }}" style="display: none" {% if value|safe == field.value|safe %}checked{% endif %}> {{ name }}
+            </button>
             {% endif %}
             {% endfor %}
         </div>
