--- a/dining_room/templates/dining_room/instructions.html
+++ b/dining_room/templates/dining_room/instructions.html
@@ -63,13 +63,13 @@
 <div class="col">
     <figure class="figure text-center">
         {% if request.user.show_dx_suggestions and request.user.show_ax_suggestions %}
-        <img src="https://dl.dropboxusercontent.com/s/h4yrxgpw23jghzk/ui_dx_ax.png" class="figure-img img-fluid rounded">
+        <img src="https://dl.dropboxusercontent.com/s/h4yrxgpw23jghzk/ui_dx_ax.png" class="figure-img img-fluid rounded border">
         {% elif request.user.show_ax_suggestions %}
-        <img src="https://dl.dropboxusercontent.com/s/cw176tczopw50mj/ui_ax.png" class="figure-img img-fluid rounded">
+        <img src="https://dl.dropboxusercontent.com/s/cw176tczopw50mj/ui_ax.png" class="figure-img img-fluid rounded border">
         {% elif request.user.show_dx_suggestions %}
-        <img src="https://dl.dropboxusercontent.com/s/wgrfnod2mzuoqly/ui_dx.png" class="figure-img img-fluid rounded">
+        <img src="https://dl.dropboxusercontent.com/s/wgrfnod2mzuoqly/ui_dx.png" class="figure-img img-fluid rounded border">
         {% else %}
-        <img src="https://dl.dropboxusercontent.com/s/irtjzezwf9s072k/ui_baseline.png" class="figure-img img-fluid rounded">
+        <img src="https://dl.dropboxusercontent.com/s/irtjzezwf9s072k/ui_baseline.png" class="figure-img img-fluid rounded border">
         {% endif %}
         <figcaption class="figure-caption">The Web UI for directing the robot.</figcaption>
     </figure>
